<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBack"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLayerBack"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="300px"
                    android:layout_height="300px"
                    android:layout_marginTop="50px"
                    android:layout_marginBottom="50px"
                    android:src="@drawable/capture"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_taufiq_rahmatullah"
                    android:textColor="@color/colorTitle"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/malang_jawa_timur"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLayerBack"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="50px"
            android:paddingTop="70px"
            android:paddingBottom="70px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postingan"
                    android:textColor="@color/colorSubTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_821"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pengikut"
                    android:textColor="@color/colorSubTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginLeft="20px"
                android:layout_marginRight="20px"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_332"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mengikuti"
                    android:textColor="@color/colorSubTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="120px"
            android:orientation="vertical"
            android:paddingTop="50px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mtaufiqrahmatullah1_gmail_com"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="50px"
                android:layout_marginBottom="10px"
                android:background="@color/colorHorizontalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telepon"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_081217299494"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="50px"
                android:layout_marginBottom="10px"
                android:background="@color/colorHorizontalDivider" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tanggal_lahir"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_19_maret_1999"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="50px"
                android:layout_marginBottom="10px"
                android:background="@color/colorHorizontalDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/belum_menikah"
                    android:textColor="@color/colorTitleWhite"
                    android:textSize="18sp"
                    android:textStyle="normal" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5px"
                android:layout_marginTop="10px"
                android:layout_marginEnd="50px"
                android:layout_marginBottom="10px"
                android:background="@color/colorHorizontalDivider" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>